# joker-2025

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
config/: config.ini
data/2023/location/en/: joker_loc_interpret_EN_train_qrels.json  joker_loc_interpret_EN_train_qrels.tsv
data/2024/retrieval/: joker_2024_task1_qrels_train.json  joker_2024_task1_queries_test.json
data/2024/translation/: joker_translation_test.json
data/processed/: cleaned_en.csv  cleaned_en.tsv  cleaned_fr.tsv  combined_en.tsv  combined_fr.csv  combined_fr.tsv  identification_gpt_4o.tsv  location_manual.tsv  text_fr.csv
data/processed/contrastive/: 0.csv  1.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  21.csv  22.csv  23.csv  24.csv  25.csv  28.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  39.csv  40.csv  41.csv  42.csv  43.csv  44.csv  46.csv  48.csv  49.csv  51.csv  52.csv  54.csv  55.csv  56.csv  57.csv  58.csv  (+4 more)
data/processed/identify_deepseek/: 0.tsv
data/processed/identify_gemini/: 0.tsv
data/processed/identify_gpt/: 0.tsv
data/processed/identify_o3/: 0.tsv
docs/: overview.md
notebooks/eda/: BILSTM_phonetic_embeddings.ipynb  evaluating_translations_with_MMTE.ipynb  expunations_eda.ipynb
src/: config.py  data.py  discriminator.py  embeddings.py  evaluate.py  evaluation.py  evaluator.py  generator.py  preprocess.py  preprocessor.py  semantic_embeddings.py  submission.py  translate.py  utils.py
src/baseline/: config.py  contrastive_learning.py  data.py
src/data/processed/: cleaned_fr.csv  contrastive.csv
(+39 files in other folders)
